# L2-efrei-create-a-sentence-generator

./: CMakeLists.txt  GIT.txt  README.txt  main.c
